<?xml version="1.0" encoding="utf-8"?>

<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">  
    
    
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgr" >

    
    <TextView
        android:id="@+id/tipmain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/tipmain"        
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="#FF0000"
        android:textColorHighlight="#FFFF00"
         />


    
    <TextView
        android:id="@+id/tip1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/tip1"
        android:textSize="15sp"
        android:padding="2dp"
        android:drawableLeft="@drawable/arrow"
        android:drawablePadding="2dp" />
    
        <ImageView
            android:id="@+id/bar1"
            android:layout_width="fill_parent"
            android:layout_height="4dip"
        	android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
    		android:background="@drawable/bar" />
        
         <TextView
        android:id="@+id/tip2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:layout_marginTop="3dp"
        android:text="@string/tip2"
        android:textSize="15sp"
        android:drawableLeft="@drawable/arrow"
        android:drawablePadding="2dp" />
         
         <ImageView
            android:id="@+id/bar1"
            android:layout_width="fill_parent"
            android:layout_height="4dip"
        	android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
    		android:background="@drawable/bar" />
        
         <TextView
        android:id="@+id/tip3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:layout_marginTop="3dp"
        android:text="@string/tip3"
        android:textSize="15sp"
        android:drawableLeft="@drawable/arrow"
        android:drawablePadding="2dp" />
         
          <ImageView
            android:id="@+id/bar1"
            android:layout_width="fill_parent"
            android:layout_height="4dip"
        	android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
    		android:background="@drawable/bar" />
        
         <TextView
        android:id="@+id/tip4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:layout_marginTop="3dp"
        android:text="@string/tip4"
        android:textSize="15sp"
        android:drawableLeft="@drawable/arrow"
        android:drawablePadding="2dp" />
         
          <ImageView
            android:id="@+id/bar1"
            android:layout_width="fill_parent"
            android:layout_height="4dip"
        	android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
    		android:background="@drawable/bar" />
        
         <TextView
        android:id="@+id/tip5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:layout_marginTop="3dp"
        android:text="@string/tip5"
        android:textSize="15sp"
        android:drawableLeft="@drawable/arrow"
        android:drawablePadding="2dp" />
         
          <ImageView
            android:id="@+id/bar1"
            android:layout_width="fill_parent"
            android:layout_height="4dip"
        	android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
    		android:background="@drawable/bar" />
        
         <TextView
        android:id="@+id/tip6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:layout_marginTop="3dp"
        android:text="@string/tip6"
        android:textSize="15sp"
        android:drawableLeft="@drawable/arrow"
        android:drawablePadding="2dp" />
         
          <ImageView
            android:id="@+id/bar1"
            android:layout_width="fill_parent"
            android:layout_height="4dip"
        	android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
    		android:background="@drawable/bar" />
        
         <TextView
        android:id="@+id/tip7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:layout_marginTop="3dp"
        android:text="@string/tip7"
        android:textSize="15sp"
        android:drawableLeft="@drawable/arrow"
        android:drawablePadding="2dp"  />

         <TextView
             android:id="@+id/tipend"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:gravity="center"
             android:layout_gravity="center_horizontal"
             android:text="@string/tipend"
             android:textAllCaps="true"
             android:textColor="#FF0000"
             android:textColorHighlight="#FFFF00"
             android:textSize="16sp"
             android:textStyle="bold"
        	android:drawableRight="@drawable/happy"        
            android:drawablePadding="5dp" />

</LinearLayout>

</ScrollView>