<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgr" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       	android:drawableLeft="@drawable/info"
        android:drawablePadding="5dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:text="@string/changepassword1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/info"
        android:drawablePadding="5dp"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="16dp"
        android:text="@string/changepassword2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/updatepassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="Send Email" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:drawableLeft="@drawable/info"
        android:drawablePadding="5dp"
        android:layout_marginTop="14dp"
        android:text="@string/changepassword3"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
